--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "fastify-cookie": "^3.2.0",
     "fastify-flash": "^1.0.5",
     "fastify-formbody": "^3.1.0",
+    "fastify-plugin": "^1.6.0",
     "fastify-reverse-routes": "^1.0.0",
     "fastify-session": "^3.1.0",
     "fastify-static": "^2.5.0",
