--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "fastify-session": "^3.1.0",
     "fastify-static": "^2.5.0",
     "fastify-webpack-hmr": "^2.1.0",
+    "http-errors": "^1.7.3",
     "lodash": "^4.17.15",
     "point-of-view": "^3.7.0",
     "pug": "^2.0.4",
