add i18next localization

--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "fastify-static": "^2.5.1",
     "fastify-webpack-hmr": "^2.1.0",
     "http-errors": "^1.7.3",
+    "i18next": "^19.0.1",
+    "i18next-node-fs-backend": "^2.1.3",
     "lodash": "^4.17.15",
     "point-of-view": "^3.7.0",
     "pug": "^2.0.4",
