--- a/package.json
+++ b/package.json
@@ -1,68 +1,68 @@
 {
-  "name": "fastify-nodejs-application",
-  "version": "0.1.0",
-  "description": "fastify-nodejs-application",
-  "main": "",
-  "scripts": {
-    "test": "jest",
-    "build-server": "babel server --out-dir dist --source-maps inline",
-    "build-app": "NODE_ENV=production npx webpack -p",
-    "build": "rm -rf dist && npm run build-app && npm run build-server",
-    "postinstall": "npm run build",
-    "start": "npm run build && NODE_ENV=production ./dist/bin/server.js",
-    "develop": "npx nodemon --exec DEBUG=application:* npx babel-node server/bin/server.js"
-  },
-  "author": "Stanislav Dzisiak",
-  "license": "ISC",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/hexlet-boilerplates/fastify-nodejs-application.git"
-  },
-  "bugs": {
-    "url": "https://github.com/hexlet-boilerplates/fastify-nodejs-application/issues"
-  },
-  "homepage": "https://github.com/hexlet-boilerplates/fastify-nodejs-application.git#readme",
-  "dependencies": {
-    "bootstrap": "^4.4.1",
-    "fastify": "^2.10.0",
-    "fastify-cookie": "^3.4.0",
-    "fastify-flash": "^1.0.5",
-    "fastify-formbody": "^3.1.0",
-    "fastify-plugin": "^1.6.0",
-    "fastify-reverse-routes": "^1.0.0",
-    "fastify-session": "^3.1.1",
-    "fastify-static": "^2.5.1",
-    "fastify-webpack-hmr": "^2.1.0",
-    "http-errors": "^1.7.3",
-    "i18next": "^19.0.1",
-    "i18next-node-fs-backend": "^2.1.3",
-    "lodash": "^4.17.15",
-    "point-of-view": "^3.7.0",
-    "pug": "^2.0.4",
-    "sequelize": "^5.21.2",
-    "sqlite3": "^4.1.0",
-    "webpack": "^4.41.2"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.7.4",
-    "@babel/core": "^7.7.4",
-    "@babel/node": "^7.7.4",
-    "@babel/preset-env": "^7.7.4",
-    "@babel/register": "^7.7.4",
-    "babel-eslint": "^10.0.3",
-    "babel-jest": "^24.9.0",
-    "babel-loader": "^8.0.6",
-    "css-loader": "^3.2.1",
-    "eslint": "^6.7.2",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-flowtype": "^4.5.2",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^23.1.1",
-    "jest": "^24.9.0",
-    "jest-cli": "^24.9.0",
-    "nodemon": "^1.19.4",
-    "sequelize-cli": "^5.5.1",
-    "style-loader": "^1.0.1",
-    "webpack-cli": "^3.3.10"
-  }
+   "name": "fastify-nodejs-application",
+   "version": "0.1.0",
+   "description": "fastify-nodejs-application",
+   "main": "",
+   "scripts": {
+      "test": "jest",
+      "build-server": "babel server --out-dir dist --source-maps inline",
+      "build-frontend": "NODE_ENV=production npx webpack -p",
+      "build": "rm -rf dist && npm run build-frontend && npm run build-server",
+      "start": "dist/server/index.js",
+      "develop": "npx nodemon --exec DEBUG=application:* npx babel-node server/bin/server.js"
+   },
+   "author": "Stanislav Dzisiak",
+   "license": "ISC",
+   "repository": {
+      "type": "git",
+      "url": "git+https://github.com/hexlet-boilerplates/fastify-nodejs-application.git"
+   },
+   "bugs": {
+      "url": "https://github.com/hexlet-boilerplates/fastify-nodejs-application/issues"
+   },
+   "homepage": "https://github.com/hexlet-boilerplates/fastify-nodejs-application.git#readme",
+   "dependencies": {
+      "bootstrap": "^4.4.1",
+      "fastify": "^2.11.0",
+      "fastify-cookie": "^3.5.0",
+      "fastify-flash": "^1.0.5",
+      "fastify-formbody": "^3.1.0",
+      "fastify-plugin": "^1.6.0",
+      "fastify-reverse-routes": "^1.1.0",
+      "fastify-session": "^3.3.0",
+      "fastify-static": "^2.6.0",
+      "fastify-typeorm": "^2.1.1",
+      "fastify-webpack-hmr": "^2.1.0",
+      "http-errors": "^1.7.3",
+      "i18next": "^19.1.0",
+      "i18next-node-fs-backend": "^2.1.3",
+      "lodash": "^4.17.15",
+      "point-of-view": "^3.7.1",
+      "pug": "^2.0.4",
+      "reflect-metadata": "^0.1.10",
+      "sql.js": "^1.1.0",
+      "typeorm": "0.2.22",
+      "webpack": "^4.41.5"
+   },
+   "devDependencies": {
+      "@babel/cli": "^7.8.4",
+      "@babel/core": "^7.8.4",
+      "@babel/node": "^7.8.4",
+      "@babel/preset-env": "^7.8.4",
+      "@babel/register": "^7.8.3",
+      "babel-eslint": "^10.0.3",
+      "babel-jest": "^25.1.0",
+      "babel-loader": "^8.0.6",
+      "css-loader": "^3.4.2",
+      "eslint": "^6.8.0",
+      "eslint-config-airbnb-base": "^14.0.0",
+      "eslint-plugin-import": "^2.20.0",
+      "eslint-plugin-jest": "^23.6.0",
+      "jest": "^25.1.0",
+      "jest-cli": "^25.1.0",
+      "nodemon": "^2.0.2",
+      "style-loader": "^1.1.3",
+      "webpack-cli": "^3.3.10",
+      "@types/node": "^8.0.29"
+   }
 }
