--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
       "build-server": "babel server --out-dir dist --source-maps inline",
       "build-frontend": "NODE_ENV=production npx webpack -p",
       "build": "rm -rf dist && npm run build-frontend && npm run build-server",
-      "start": "dist/server/index.js",
+      "start": "ts-node src/index.ts",
       "develop": "npx nodemon --exec DEBUG=application:* npx babel-node server/bin/server.js"
    },
    "author": "Stanislav Dzisiak",
@@ -22,6 +22,8 @@
    },
    "homepage": "https://github.com/hexlet-boilerplates/fastify-nodejs-application.git#readme",
    "dependencies": {
+      "@babel/plugin-proposal-class-properties": "^7.8.3",
+      "@babel/plugin-proposal-decorators": "^7.8.3",
       "bootstrap": "^4.4.1",
       "fastify": "^2.12.1",
       "fastify-cookie": "^3.6.0",
@@ -32,14 +34,13 @@
       "fastify-session": "^3.3.0",
       "fastify-static": "^2.6.0",
       "fastify-typeorm": "^2.1.1",
-      "fastify-webpack-hmr": "^2.1.0",
       "http-errors": "^1.7.3",
       "i18next": "^19.3.2",
       "i18next-node-fs-backend": "^2.1.3",
       "lodash": "^4.17.15",
       "point-of-view": "^3.7.2",
       "pug": "^2.0.4",
-      "reflect-metadata": "^0.1.13",
+      "reflect-metadata": "^0.1.10",
       "sql.js": "^1.1.0",
       "typeorm": "0.2.24",
       "webpack": "^4.42.0"
@@ -50,6 +51,7 @@
       "@babel/node": "^7.8.4",
       "@babel/preset-env": "^7.8.6",
       "@babel/register": "^7.8.6",
+      "@types/node": "^8.0.29",
       "babel-eslint": "^10.1.0",
       "babel-jest": "^25.1.0",
       "babel-loader": "^8.0.6",
@@ -58,11 +60,16 @@
       "eslint-config-airbnb-base": "^14.0.0",
       "eslint-plugin-import": "^2.20.1",
       "eslint-plugin-jest": "^23.8.1",
+      "fastify-cli": "^1.4.0",
+      "fastify-error-page": "^3.0.0",
       "jest": "^25.1.0",
       "jest-cli": "^25.1.0",
       "nodemon": "^2.0.2",
+      "pino-pretty": "^3.6.1",
       "style-loader": "^1.1.3",
+      "ts-node": "3.3.0",
+      "typescript": "3.3.3333",
       "webpack-cli": "^3.3.11",
-      "@types/node": "^13.7.7"
+      "webpack-dev-server": "^3.10.3"
    }
 }
