--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
       "@babel/plugin-proposal-class-properties": "^7.8.3",
       "@babel/plugin-proposal-decorators": "^7.8.3",
       "bootstrap": "^4.4.1",
+      "class-validator": "^0.11.0",
       "fastify": "^2.12.1",
       "fastify-cookie": "^3.6.0",
       "fastify-flash": "^1.0.5",
