--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
       "class-validator": "^0.11.0",
       "fastify": "^2.12.1",
       "fastify-cookie": "^3.6.0",
-      "fastify-flash": "^1.0.5",
+      "fastify-error-page": "^3.0.0",
+      "fastify-flash": "^1.0.6",
       "fastify-formbody": "^3.1.0",
       "fastify-plugin": "^1.6.1",
       "fastify-reverse-routes": "^1.1.0",
+      "fastify-secure-session": "^1.2.0",
       "fastify-session": "^3.3.0",
       "fastify-static": "^2.6.0",
       "fastify-typeorm": "^2.1.1",
@@ -41,18 +43,19 @@
       "lodash": "^4.17.15",
       "point-of-view": "^3.7.2",
       "pug": "^2.0.4",
-      "reflect-metadata": "^0.1.10",
-      "sql.js": "^1.1.0",
+      "reflect-metadata": "^0.1.13",
+      "sql.js": "^1.2.1",
+      "sqlite3": "^4.1.1",
       "typeorm": "0.2.24",
       "webpack": "^4.42.0"
    },
    "devDependencies": {
       "@babel/cli": "^7.8.4",
-      "@babel/core": "^7.8.6",
-      "@babel/node": "^7.8.4",
-      "@babel/preset-env": "^7.8.6",
+      "@babel/core": "^7.8.7",
+      "@babel/node": "^7.8.7",
+      "@babel/preset-env": "^7.8.7",
       "@babel/register": "^7.8.6",
-      "@types/node": "^8.0.29",
+      "@types/node": "^13.9.0",
       "babel-eslint": "^10.1.0",
       "babel-jest": "^25.1.0",
       "babel-loader": "^8.0.6",
@@ -60,16 +63,15 @@
       "eslint": "^6.8.0",
       "eslint-config-airbnb-base": "^14.0.0",
       "eslint-plugin-import": "^2.20.1",
-      "eslint-plugin-jest": "^23.8.1",
-      "fastify-cli": "^1.4.0",
-      "fastify-error-page": "^3.0.0",
+      "eslint-plugin-jest": "^23.8.2",
+      "fastify-cli": "^1.5.0",
       "jest": "^25.1.0",
       "jest-cli": "^25.1.0",
       "nodemon": "^2.0.2",
       "pino-pretty": "^3.6.1",
       "style-loader": "^1.1.3",
-      "ts-node": "3.3.0",
-      "typescript": "3.3.3333",
+      "ts-node": "8.6.2",
+      "typescript": "3.8.3",
       "webpack-cli": "^3.3.11",
       "webpack-dev-server": "^3.10.3"
    }
