--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
    "dependencies": {
       "@babel/plugin-proposal-class-properties": "^7.8.3",
       "@babel/plugin-proposal-decorators": "^7.8.3",
+      "@rails/ujs": "^6.0.2-1",
       "bootstrap": "^4.4.1",
       "class-validator": "^0.11.0",
       "fastify": "^2.12.1",
@@ -31,6 +32,7 @@
       "fastify-error-page": "^3.0.0",
       "fastify-flash": "^1.0.6",
       "fastify-formbody": "^3.1.0",
+      "fastify-method-override": "^1.0.3",
       "fastify-plugin": "^1.6.1",
       "fastify-reverse-routes": "^1.1.0",
       "fastify-secure-session": "^1.2.0",
