--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
    "main": "",
    "scripts": {
       "test": "jest",
-      "build-server": "babel server --out-dir dist --source-maps inline",
+      "build-configs": "babel ormconfig.js webpack.config.js --out-dir dist",
+      "build-server": "NODE_ENV=production babel server --out-dir dist/server --source-maps inline && npm run build-configs && cp -r server/views dist/server/views",
       "build-frontend": "NODE_ENV=production npx webpack -p",
       "build": "rm -rf dist && npm run build-frontend && npm run build-server",
-      "start": "ts-node src/index.ts",
+      "start": "node dist/server/bin/server.js",
       "develop": "npx nodemon --exec DEBUG=application:* npx babel-node server/bin/server.js"
    },
    "author": "Stanislav Dzisiak",
