--- a/package.json
+++ b/package.json
@@ -25,55 +25,55 @@
    "dependencies": {
       "@babel/plugin-proposal-class-properties": "^7.8.3",
       "@babel/plugin-proposal-decorators": "^7.8.3",
-      "@rails/ujs": "^6.0.2-2",
-      "bootstrap": "^4.4.1",
-      "class-validator": "^0.11.1",
-      "fastify": "^2.13.0",
-      "fastify-cookie": "^3.6.0",
+      "@rails/ujs": "^6.0.3",
+      "bootstrap": "^4.5.0",
+      "class-validator": "^0.12.2",
+      "fastify": "^2.14.1",
+      "fastify-cookie": "^3.6.1",
       "fastify-error-page": "^3.0.0",
       "fastify-flash": "^1.0.6",
-      "fastify-formbody": "^3.1.0",
+      "fastify-formbody": "^3.2.0",
       "fastify-method-override": "^1.1.0",
       "fastify-plugin": "^1.6.1",
       "fastify-reverse-routes": "^1.1.0",
       "fastify-secure-session": "^1.2.0",
-      "fastify-session": "^3.3.0",
-      "fastify-static": "^2.6.0",
-      "fastify-typeorm": "^2.1.1",
+      "fastify-session": "^4.0.0",
+      "fastify-static": "^2.7.0",
+      "fastify-typeorm": "^2.1.2",
       "http-errors": "^1.7.3",
-      "i18next": "^19.4.0",
+      "i18next": "^19.4.4",
       "i18next-node-fs-backend": "^2.1.3",
       "lodash": "^4.17.15",
       "point-of-view": "^3.8.0",
       "pug": "^2.0.4",
       "reflect-metadata": "^0.1.13",
       "sql.js": "^1.2.2",
-      "sqlite3": "^4.1.1",
+      "sqlite3": "^4.2.0",
       "typeorm": "0.2.24",
-      "webpack": "^4.42.1"
+      "webpack": "^4.43.0"
    },
    "devDependencies": {
       "@babel/cli": "^7.8.4",
-      "@babel/core": "^7.9.0",
+      "@babel/core": "^7.9.6",
       "@babel/node": "^7.8.7",
-      "@babel/preset-env": "^7.9.5",
+      "@babel/preset-env": "^7.9.6",
       "@babel/register": "^7.9.0",
-      "@types/node": "^13.11.1",
+      "@types/node": "^13.13.5",
       "babel-eslint": "^10.1.0",
-      "babel-jest": "^25.3.0",
+      "babel-jest": "^26.0.1",
       "babel-loader": "^8.1.0",
-      "css-loader": "^3.5.1",
-      "eslint": "^6.8.0",
+      "css-loader": "^3.5.3",
+      "eslint": "^7.0.0",
       "eslint-config-airbnb-base": "^14.1.0",
       "eslint-plugin-import": "^2.20.2",
-      "eslint-plugin-jest": "^23.8.2",
+      "eslint-plugin-jest": "^23.11.0",
       "fastify-cli": "^1.5.0",
-      "jest": "^25.3.0",
-      "jest-cli": "^25.3.0",
+      "jest": "^26.0.1",
+      "jest-cli": "^26.0.1",
       "nodemon": "^2.0.3",
       "pino-pretty": "^4.0.0",
-      "style-loader": "^1.1.3",
+      "style-loader": "^1.2.1",
       "webpack-cli": "^3.3.11",
-      "webpack-dev-server": "^3.10.3"
+      "webpack-dev-server": "^3.11.0"
    }
 }
