--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -17,7 +17,7 @@ jobs:
           node-version: '13.x'
       - name: npm install, build
         run: |
-          make install
+          make setup
           make build
       - name: Run linter
         run: make lint
