--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
    "main": "",
    "scripts": {
       "test": "jest",
-      "build-configs": "babel ormconfig.js webpack.config.js --out-dir dist",
+      "build-configs": "babel webpack.config.js --out-dir dist && cp ormconfig.json dist",
       "build-server": "NODE_ENV=production babel server --out-dir dist/server --source-maps inline && npm run build-configs && cp -r server/views dist/server/views",
-      "build-frontend": "NODE_ENV=production npx webpack -p",
-      "build": "rm -rf dist && npm run build-frontend && npm run build-server",
+      "build-frontend": "NODE_ENV=production webpack -p",
+      "build": "rm -rf dist && npm run build-frontend && npm run build-server && NODE_ENV=production sequelize db:migrate",
       "start": "NODE_ENV=production node dist/server/bin/server.js",
       "develop": "npx nodemon --exec DEBUG=application:* npx babel-node server/bin/server.js"
    },
@@ -23,11 +23,10 @@
    },
    "homepage": "https://github.com/hexlet-boilerplates/fastify-nodejs-application.git#readme",
    "dependencies": {
-      "@babel/plugin-proposal-class-properties": "^7.8.3",
-      "@babel/plugin-proposal-decorators": "^7.8.3",
+      "@babel/plugin-proposal-class-properties": "^7.10.1",
+      "@babel/plugin-proposal-decorators": "^7.10.1",
       "@rails/ujs": "^6.0.3",
       "bootstrap": "^4.5.0",
-      "class-validator": "^0.12.2",
       "fastify": "^2.14.1",
       "fastify-cookie": "^3.6.1",
       "fastify-error-page": "^3.0.0",
@@ -37,41 +36,42 @@
       "fastify-plugin": "^1.6.1",
       "fastify-reverse-routes": "^1.1.0",
       "fastify-secure-session": "^1.2.0",
+      "fastify-sequelize": "^1.0.4",
       "fastify-session": "^4.0.0",
       "fastify-static": "^2.7.0",
-      "fastify-typeorm": "^2.1.2",
       "http-errors": "^1.7.3",
-      "i18next": "^19.4.4",
+      "i18next": "^19.4.5",
       "i18next-node-fs-backend": "^2.1.3",
       "lodash": "^4.17.15",
       "point-of-view": "^3.8.0",
-      "pug": "^2.0.4",
+      "pug": "^3.0.0",
       "reflect-metadata": "^0.1.13",
-      "sql.js": "^1.2.2",
+      "sequelize": "^5.21.11",
+      "sql.js": "^1.3.0",
       "sqlite3": "^4.2.0",
-      "typeorm": "0.2.24",
       "webpack": "^4.43.0"
    },
    "devDependencies": {
-      "@babel/cli": "^7.8.4",
-      "@babel/core": "^7.9.6",
-      "@babel/node": "^7.8.7",
-      "@babel/preset-env": "^7.9.6",
-      "@babel/register": "^7.9.0",
-      "@types/node": "^13.13.5",
+      "@babel/cli": "^7.10.1",
+      "@babel/core": "^7.10.2",
+      "@babel/node": "^7.10.1",
+      "@babel/preset-env": "^7.10.2",
+      "@babel/register": "^7.10.1",
+      "@types/node": "^14.0.9",
       "babel-eslint": "^10.1.0",
       "babel-jest": "^26.0.1",
       "babel-loader": "^8.1.0",
       "css-loader": "^3.5.3",
-      "eslint": "^7.0.0",
+      "eslint": "^7.1.0",
       "eslint-config-airbnb-base": "^14.1.0",
       "eslint-plugin-import": "^2.20.2",
-      "eslint-plugin-jest": "^23.11.0",
+      "eslint-plugin-jest": "^23.13.2",
       "fastify-cli": "^1.5.0",
       "jest": "^26.0.1",
       "jest-cli": "^26.0.1",
-      "nodemon": "^2.0.3",
+      "nodemon": "^2.0.4",
       "pino-pretty": "^4.0.0",
+      "sequelize-cli": "^5.5.1",
       "style-loader": "^1.2.1",
       "webpack-cli": "^3.3.11",
       "webpack-dev-server": "^3.11.0"
