--- a/package.json
+++ b/package.json
@@ -23,57 +23,45 @@
    },
    "homepage": "https://github.com/hexlet-boilerplates/fastify-nodejs-application.git#readme",
    "dependencies": {
-      "@babel/plugin-proposal-class-properties": "^7.10.1",
-      "@babel/plugin-proposal-decorators": "^7.10.1",
-      "@rails/ujs": "^6.0.3",
       "bootstrap": "^4.5.0",
-      "fastify": "^2.14.1",
-      "fastify-cookie": "^3.6.1",
+      "fastify": "^3.0.0-rc.4",
       "fastify-error-page": "^3.0.0",
-      "fastify-flash": "^1.0.6",
-      "fastify-formbody": "^3.2.0",
-      "fastify-method-override": "^1.1.0",
-      "fastify-plugin": "^1.6.1",
+      "fastify-flash": "^2.0.1",
+      "fastify-formbody": "^4.0.1",
+      "fastify-method-override": "^1.3.1",
       "fastify-reverse-routes": "^1.1.0",
-      "fastify-secure-session": "^1.2.0",
+      "fastify-secure-session": "^2.1.0",
       "fastify-sequelize": "^1.0.4",
-      "fastify-session": "^4.0.0",
-      "fastify-static": "^2.7.0",
-      "http-errors": "^1.7.3",
-      "i18next": "^19.4.5",
-      "i18next-node-fs-backend": "^2.1.3",
+      "fastify-static": "^3.0.1",
+      "i18next": "^19.5.1",
       "lodash": "^4.17.15",
-      "point-of-view": "^3.8.0",
+      "point-of-view": "^4.2.0",
       "pug": "^3.0.0",
-      "reflect-metadata": "^0.1.13",
-      "sequelize": "^5.21.11",
-      "sql.js": "^1.3.0",
+      "sequelize": "^6.2.0",
       "sqlite3": "^4.2.0",
       "webpack": "^4.43.0"
    },
    "devDependencies": {
-      "@babel/cli": "^7.10.1",
-      "@babel/core": "^7.10.2",
-      "@babel/node": "^7.10.1",
-      "@babel/preset-env": "^7.10.2",
-      "@babel/register": "^7.10.1",
-      "@types/node": "^14.0.9",
+      "@babel/cli": "^7.10.3",
+      "@babel/core": "^7.10.3",
+      "@babel/node": "^7.10.3",
+      "@babel/preset-env": "^7.10.3",
+      "@types/node": "^14.0.14",
       "babel-eslint": "^10.1.0",
-      "babel-jest": "^26.0.1",
+      "babel-jest": "^26.1.0",
       "babel-loader": "^8.1.0",
-      "css-loader": "^3.5.3",
-      "eslint": "^7.1.0",
-      "eslint-config-airbnb-base": "^14.1.0",
-      "eslint-plugin-import": "^2.20.2",
-      "eslint-plugin-jest": "^23.13.2",
-      "fastify-cli": "^1.5.0",
-      "jest": "^26.0.1",
-      "jest-cli": "^26.0.1",
+      "css-loader": "^3.6.0",
+      "eslint": "^7.3.1",
+      "eslint-config-airbnb-base": "^14.2.0",
+      "eslint-plugin-import": "^2.21.2",
+      "eslint-plugin-jest": "^23.17.1",
+      "jest": "^26.1.0",
+      "jest-cli": "^26.1.0",
       "nodemon": "^2.0.4",
       "pino-pretty": "^4.0.0",
-      "sequelize-cli": "^5.5.1",
+      "sequelize-cli": "^6.0.0",
       "style-loader": "^1.2.1",
-      "webpack-cli": "^3.3.11",
+      "webpack-cli": "^3.3.12",
       "webpack-dev-server": "^3.11.0"
    }
 }
