--- a/package.json
+++ b/package.json
@@ -24,42 +24,42 @@
    "homepage": "https://github.com/hexlet-boilerplates/fastify-nodejs-application.git#readme",
    "dependencies": {
       "bootstrap": "^4.5.0",
-      "fastify": "^3.0.0-rc.4",
-      "fastify-error-page": "^3.0.0",
-      "fastify-flash": "^2.0.1",
-      "fastify-formbody": "^4.0.1",
-      "fastify-method-override": "^1.3.1",
+      "fastify": "^3.0.3",
+      "fastify-error-page": "^4.0.0",
+      "fastify-flash": "^2.0.2",
+      "fastify-formbody": "^4.0.3",
+      "fastify-method-override": "^1.4.0",
       "fastify-reverse-routes": "^1.1.0",
       "fastify-secure-session": "^2.1.0",
       "fastify-sequelize": "^1.0.4",
-      "fastify-static": "^3.0.1",
-      "i18next": "^19.5.1",
-      "lodash": "^4.17.15",
+      "fastify-static": "^3.1.0",
+      "i18next": "^19.6.2",
+      "lodash": "^4.17.19",
       "point-of-view": "^4.2.0",
       "pug": "^3.0.0",
-      "sequelize": "^6.2.0",
-      "sqlite3": "^4.2.0",
+      "sequelize": "^6.3.3",
+      "sqlite3": "^5.0.0",
       "webpack": "^4.43.0"
    },
    "devDependencies": {
-      "@babel/cli": "^7.10.3",
-      "@babel/core": "^7.10.3",
-      "@babel/node": "^7.10.3",
-      "@babel/preset-env": "^7.10.3",
-      "@types/node": "^14.0.14",
+      "@babel/cli": "^7.10.5",
+      "@babel/core": "^7.10.5",
+      "@babel/node": "^7.10.5",
+      "@babel/preset-env": "^7.10.4",
+      "@types/node": "^14.0.23",
       "babel-eslint": "^10.1.0",
       "babel-jest": "^26.1.0",
       "babel-loader": "^8.1.0",
       "css-loader": "^3.6.0",
-      "eslint": "^7.3.1",
+      "eslint": "^7.4.0",
       "eslint-config-airbnb-base": "^14.2.0",
-      "eslint-plugin-import": "^2.21.2",
-      "eslint-plugin-jest": "^23.17.1",
+      "eslint-plugin-import": "^2.22.0",
+      "eslint-plugin-jest": "^23.18.0",
       "jest": "^26.1.0",
       "jest-cli": "^26.1.0",
       "nodemon": "^2.0.4",
-      "pino-pretty": "^4.0.0",
-      "sequelize-cli": "^6.0.0",
+      "pino-pretty": "^4.0.3",
+      "sequelize-cli": "^6.2.0",
       "style-loader": "^1.2.1",
       "webpack-cli": "^3.3.12",
       "webpack-dev-server": "^3.11.0"
