--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
    "main": "",
    "scripts": {
       "test": "jest",
-      "build-configs": "babel webpack.config.js --out-dir dist && cp ormconfig.json dist",
+      "build-configs": "babel webpack.config.js --out-dir dist && cp knexfile.js dist",
       "build-server": "NODE_ENV=production babel server --out-dir dist/server --source-maps inline && npm run build-configs && cp -r server/views dist/server/views",
       "build-frontend": "NODE_ENV=production webpack -p",
-      "build": "rm -rf dist && npm run build-frontend && npm run build-server && NODE_ENV=production sequelize db:migrate",
+      "build": "rm -rf dist && npm run build-frontend && npm run build-server && NODE_ENV=production knex migrate:latest",
       "start": "NODE_ENV=production node dist/server/bin/server.js",
       "develop": "npx nodemon --exec DEBUG=application:* npx babel-node server/bin/server.js"
    },
@@ -24,20 +24,21 @@
    "homepage": "https://github.com/hexlet-boilerplates/fastify-nodejs-application.git#readme",
    "dependencies": {
       "bootstrap": "^4.5.0",
-      "fastify": "^3.0.3",
+      "fastify": "^3.1.1",
       "fastify-error-page": "^4.0.0",
       "fastify-flash": "^2.0.2",
       "fastify-formbody": "^4.0.3",
       "fastify-method-override": "^1.4.0",
+      "fastify-objectionjs": "^0.2.2",
       "fastify-reverse-routes": "^1.1.0",
-      "fastify-secure-session": "^2.1.0",
-      "fastify-sequelize": "^1.0.4",
+      "fastify-secure-session": "^2.2.0",
       "fastify-static": "^3.1.0",
       "i18next": "^19.6.2",
+      "knex": "^0.21.2",
       "lodash": "^4.17.19",
+      "objection": "^2.2.1",
       "point-of-view": "^4.2.0",
       "pug": "^3.0.0",
-      "sequelize": "^6.3.3",
       "sqlite3": "^5.0.0",
       "webpack": "^4.43.0"
    },
@@ -59,7 +60,6 @@
       "jest-cli": "^26.1.0",
       "nodemon": "^2.0.4",
       "pino-pretty": "^4.0.3",
-      "sequelize-cli": "^6.2.0",
       "style-loader": "^1.2.1",
       "webpack-cli": "^3.3.12",
       "webpack-dev-server": "^3.11.0"
