--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
       "objection-unique": "^1.2.1",
       "point-of-view": "^4.2.0",
       "pug": "^3.0.0",
+      "rollbar": "^2.19.2",
       "sqlite3": "^5.0.0",
       "webpack": "^4.43.0"
    },
