add node version 14.7.0

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
    "description": "fastify-nodejs-application",
    "main": "",
   "engines": {
-    "node": ">=14"
+    "node": "14.7.0"
   },
    "scripts": {
       "test": "jest",
