--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
       "@babel/node": "^7.10.5",
       "@babel/preset-env": "^7.10.4",
       "@types/node": "^14.0.23",
+      "autoprefixer": "^9.8.6",
       "babel-eslint": "^10.1.0",
       "babel-jest": "^26.1.0",
       "babel-loader": "^8.1.0",
@@ -65,6 +66,7 @@
       "jest-cli": "^26.1.0",
       "nodemon": "^2.0.4",
       "pino-pretty": "^4.0.3",
+      "postcss-loader": "^3.0.0",
       "style-loader": "^1.2.1",
       "webpack-cli": "^3.3.12",
       "webpack-dev-server": "^3.11.0"
