--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
    "homepage": "https://github.com/hexlet-boilerplates/fastify-nodejs-application.git#readme",
    "dependencies": {
       "bootstrap": "^4.5.0",
+      "dotenv": "^8.2.0",
       "fastify": "^3.2.0",
       "fastify-error-page": "^4.0.0",
       "fastify-flash": "^2.0.2",
