--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
       "fastify-reverse-routes": "^1.1.0",
       "fastify-secure-session": "^2.2.0",
       "fastify-static": "^3.1.0",
+      "http-errors": "^1.8.0",
       "i18next": "^19.6.2",
       "knex": "^0.21.4",
       "lodash": "^4.17.19",
       "objection": "^2.2.1",
       "objection-unique": "^1.2.1",
+      "pg": "^8.3.3",
       "point-of-view": "^4.2.0",
       "pug": "^3.0.0",
       "rollbar": "^2.19.2",
