--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -16,6 +16,9 @@ jobs:
         with:
           node-version: '14.x'
       - name: npm install, build
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          ROLLBAR_ACCESS_TOKEN: ${{ secrets.ROLLBAR_ACCESS_TOKEN }}
         run: |
           make setup
           make build
