--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
       "bootstrap": "^4.5.0",
       "dotenv": "^8.2.0",
       "fastify": "^3.4.1",
+      "fastify-auth": "^1.0.1",
       "fastify-error-page": "^4.0.0",
       "fastify-flash": "^2.0.2",
       "fastify-formbody": "^4.0.3",
