--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
       "eslint-config-airbnb-base": "^14.2.0",
       "eslint-plugin-import": "^2.22.0",
       "eslint-plugin-jest": "^23.18.0",
+      "faker": "^5.1.0",
       "jest": "^26.1.0",
       "jest-cli": "^26.1.0",
       "nodemon": "^2.0.4",
