--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
       "pino-pretty": "^4.0.3",
       "postcss-loader": "^3.0.0",
       "style-loader": "^1.2.1",
+      "supertest": "^5.0.0",
       "webpack-cli": "^3.3.12",
       "webpack-dev-server": "^3.11.0"
    }
