--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
       "faker": "^5.1.0",
       "jest": "^26.1.0",
       "jest-cli": "^26.1.0",
+      "jest-supertest-matchers": "0.0.2",
       "nodemon": "^2.0.4",
       "pino-pretty": "^4.0.3",
       "postcss-loader": "^3.0.0",
