--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
       "develop": "npx nodemon --exec DEBUG=application:* npx babel-node server/bin/server.js"
    },
    "jest": {
-    "modulePathIgnorePatterns": [
-      "<rootDir>/__tests__/helpers/"
-    ]
-  },
+      "modulePathIgnorePatterns": [
+         "<rootDir>/__tests__/helpers/"
+      ]
+   },
    "author": "Nikita Deputatov",
    "license": "ISC",
    "repository": {
@@ -70,6 +70,7 @@
       "eslint-plugin-import": "^2.22.0",
       "eslint-plugin-jest": "^23.18.0",
       "faker": "^5.1.0",
+      "heroku": "^7.51.0",
       "jest": "^26.1.0",
       "jest-cli": "^26.1.0",
       "nodemon": "^2.0.4",
